@@ -8,7 +8,7 @@
            "PROCESS-INTERRUPT" "PROCESS-RESTART" "PROCESSP" "PROCESS-NAME"
            "PROCESS-ACTIVE-P" "PROCESS-STATE" "CURRENT-PROCESS" "LIST-PROCESSES"
            "MAKE-LOCK" "PROCESS-LOCK" "PROCESS-UNLOCK" "WITH-LOCK"
-           "Y-OR-N-P-TIMEOUT" "WITH-TIMEOUT"))
+           "Y-OR-N-P-TIMEOUT" "YES-OR-NO-P-TIMEOUT" "WITH-TIMEOUT"))
 
 (in-package "MT")
 
@@ -22,12 +22,23 @@
 terminate and evaluate TIMEOUT-FORMS."
   `(call-with-timeout ,seconds (lambda () ,@timeout-forms) (lambda () ,@body)))
 
+(defun timeout-message (default localinfo)
+  (write-string (SYS::TEXT "[Timed out] "))
+  (write-string (car (funcall (if default #'cdr #'car) localinfo)))
+  (terpri)
+  default)
+
 (defun y-or-n-p-timeout (seconds default &rest args)
   "Y-OR-N-P with timeout."
   (declare (ignorable seconds default))
-  (with-timeout (seconds (format t "[Timed out] ~:[NO~;YES~]~%" default)
-                         default)
+  (with-timeout (seconds (timeout-message default (localized 'sys::y-or-n)))
     (apply #'y-or-n-p args)))
+
+(defun yes-or-no-p-timeout (seconds default &rest args)
+  "YES-OR-NO-P with timeout."
+  (declare (ignorable seconds default))
+  (with-timeout (seconds (timeout-message default (localized 'sys::yes-or-no)))
+    (apply #'yes-or-no-p args)))
 
 ;;; locks
 
@@ -42,7 +53,7 @@ terminate and evaluate TIMEOUT-FORMS."
   (let ((self (current-process)) (owner (lock-owner lock)))
     (when owner
       (unless (eq owner self)
-        (error (TEXT "~S: ~S does not own ~S" 'process-unlock self lock)))
+        (error (SYS::TEXT "~S: ~S does not own ~S") 'process-unlock self lock))
       (setf (lock-owner lock) nil))))
 
 (defmacro with-lock ((lock) &body body)
